--- a/src/Layout/Header/header.module.scss
+++ b/src/Layout/Header/header.module.scss
@@ -1,10 +1,9 @@
 .header {
   position: relative;
   margin: 0;
-  height: 80vh;
+  height: 76vh;
   width: 100%;
   padding: 80px 20px 100px;
-  //box-shadow: 0 5px 10px #c69f6c;
   box-shadow: 0 5px 10px #e6e6e6;
   @media (max-width: 992px) {
     display: flex;
@@ -14,7 +13,6 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-end;
-    //padding: 0px 20px 100px;
   }
 }
 .header__inner {
@@ -44,7 +42,9 @@
   position: absolute;
   font-size: 40px;
   font-weight: 400;
-  color: #fff;
+  color: #999;
+  -webkit-text-stroke: 1px #777;
+
   width: 400px;
   text-align: start;
   @media (max-width: 1200px) {
@@ -71,14 +71,24 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7)),
     url(../../assets/bg-img.jpg);
   clip-path: circle(60% at left 300px);
+  background-repeat: no-repeat;
+  background-size: cover;
+  @media (max-width: 992px) {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7)),
+      url(../../assets/bg-img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .title {
   font-weight: 400;
-  color: #000;
+  color: #999;
+  -webkit-text-stroke: 1px #777;
+
   padding-bottom: 60px;
   @media (max-width: 576px) {
     font-size: 40px;
@@ -88,6 +98,7 @@
   position: relative;
   width: 400px;
   button {
+    cursor: pointer;
     height: 61px;
     position: absolute;
     right: 10px;
