--- a/src/components/Book/book.module.scss
+++ b/src/components/Book/book.module.scss
@@ -20,3 +20,77 @@
   font-size: 18px;
   color: #000;
 }
+
+.modal__content {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.modal__content_top {
+  display: flex;
+  @media (max-width: 490px) {
+    flex-direction: column;
+  }
+  img {
+    height: 300px;
+    width: 200px;
+    @media (max-width: 756px) {
+      height: 200px;
+      width: 150px;
+    }
+    @media (max-width: 490px) {
+      margin: 0 auto 30px;
+    }
+  }
+}
+.modal__top_info {
+  padding-left: 40px;
+  text-align: left;
+  @media (max-width: 490px) {
+    padding-left: 0px;
+  }
+  > * {
+    margin-bottom: 20px;
+    @media (max-width: 756px) {
+      margin-bottom: 10px;
+    }
+  }
+  h2 {
+    font-size: 20px;
+    @media (max-width: 756px) {
+      font-size: 18px;
+    }
+  }
+
+  a {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 40px;
+    color: #fff;
+    background-color: #000;
+    transition: 0.5s;
+    @media (max-width: 756px) {
+      margin-top: 20px;
+    }
+    &:hover {
+      color: #fff;
+      background-color: #444;
+      transition: 0.5s;
+    }
+  }
+}
+
+.modal__description {
+  text-align: start;
+  margin: 30px 0;
+  font-size: 18px;
+  line-height: 1.4;
+  @media (max-width: 756px) {
+    font-size: 16px;
+    line-height: 1.3;
+  }
+  @media (max-width: 490px) {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+}
