--- a/src/Layout/Header/header.module.scss
+++ b/src/Layout/Header/header.module.scss
@@ -103,6 +103,7 @@
     position: absolute;
     right: 10px;
     top: 2px;
+    outline: none;
     background-color: transparent;
     border: none;
   }
