--- a/src/components/Books/books.module.scss
+++ b/src/components/Books/books.module.scss
@@ -16,3 +16,12 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+.error {
+  font-weight: 400;
+  font-size: 40px;
+  padding: 45vh 0 0;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
