--- a/src/Layout/Header/header.module.scss
+++ b/src/Layout/Header/header.module.scss
@@ -42,8 +42,8 @@
   position: absolute;
   font-size: 40px;
   font-weight: 400;
-  color: #999;
-  -webkit-text-stroke: 1px #777;
+  color: #fff;
+  -webkit-text-stroke: 1px #000;
 
   width: 400px;
   text-align: start;
@@ -86,8 +86,8 @@
 
 .title {
   font-weight: 400;
-  color: #999;
-  -webkit-text-stroke: 1px #777;
+  color: #fff;
+  -webkit-text-stroke: 1px #000;
 
   padding-bottom: 60px;
   @media (max-width: 576px) {
